--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -108,6 +108,14 @@
   margin-left: 0.5rem;
 }
 
+.box{
+  border:1px solid black;
+  border-radius:1rem;
+  background-color:#77ffcc;
+  margin:1rem;
+  padding:1rem;
+}
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
